# phoneassistant

./: CMakeLists.txt  README.md  build.gradle  settings.gradle  work
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  piper_tts.cpp  whisper_stt.cpp
app/src/main/java/com/froginc/voiceassistant/: MainActivity.kt
app/src/main/java/com/froginc/voiceassistant/network/: OllamaService.kt  ToolCallService.kt
app/src/main/java/com/froginc/voiceassistant/settings/: SettingsActivity.kt  SettingsScreen.kt
app/src/main/java/com/froginc/voiceassistant/stt/: WhisperSTT.kt
app/src/main/java/com/froginc/voiceassistant/tts/: PiperTTS.kt
